@@ -1,3 +1,12 @@
+2004-03-04  Sebastian Wilhelmi  <seppi@seppi.de>
+
+	* glib/gmain.c: Use the atomic integer operations for GMainContext
+	and GMainLoop reference counting.
+
+	* glib/gmain.c: Hold the main_context_list lock, when iterating
+	the list. Only call g_main_context_wakeup for positive reference
+	count.
+
 2004-03-03  Tor Lillqvist  <tml@iki.fi>
 
 	* glibconfig.h.win32.in: Update to match a configure-generated
